--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,10 +43,19 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation "androidx.fragment:fragment:1.3.0-alpha05"
+
+    // UI
+    def navVersion = "2.3.5"
+    implementation "androidx.navigation:navigation-fragment-ktx:$navVersion"
+    implementation "androidx.navigation:navigation-ui-ktx:$navVersion"
 
     def materialVersion = "1.5.0-alpha04"
     implementation "com.google.android.material:material:$materialVersion"
+    
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
+
+    // Test
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
